[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/RIKY2vamp.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/CreditsScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/DialogueScene1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Themes/ButtonTheme.tres" type="Theme" id=5]
[ext_resource path="res://Sound/Music/A Dark Ritual.ogg" type="AudioStream" id=6]
[ext_resource path="res://Backgrounds/MENU.PNG" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 173
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 150
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Node2D"]
scale = Vector2( 1, 0.99643 )
script = ExtResource( 2 )
FirstScene = ExtResource( 4 )
FinalScene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.458824, 0.0117647, 0.0117647, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1922.0
margin_bottom = 1084.0
texture = ExtResource( 7 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 200
custom_constants/margin_top = 100
custom_constants/margin_left = 200
custom_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 200.0
margin_top = 100.0
margin_right = 1720.0
margin_bottom = 930.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1520.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Moonlight Desires"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 1520.0
margin_bottom = 830.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1520.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_left = 150

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 150.0
margin_right = 1370.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 1520.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_left = 150

[node name="CreditsButton2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 150.0
margin_right = 1370.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Credits"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 1520.0
margin_bottom = 559.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_left = 150

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 150.0
margin_right = 1370.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Exit Game"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true
attenuation = 1.68179

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/NewGameButton" to="." method="_on_NewGameButton_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/CreditsButton2" to="." method="_on_CreditsButton2_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/ExitButton" to="." method="_on_ExitButton_button_up"]
